--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  syncfusion_flutter_pdf: ^20.1.59-beta
+  path_provider: ^2.0.11
+  open_file: ^3.2.1
+  pdf: ^3.8.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -49,6 +52,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_datetime_picker: ^1.5.1
   pie_chart: ^5.3.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
