--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,21 +37,29 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
+  flutter_lints: ^2.0.0
+  flutter_datetime_picker: ^1.5.1
+  pie_chart: ^5.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.3
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  # <a href="https://www.flaticon.com/free-icons/benefit" title="benefit icons">Benefit icons created by Aranagraphics - Flaticon</a>
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-  flutter_datetime_picker: ^1.5.1
-  pie_chart: ^5.3.0
+
   
 
 # For information on the generic Dart part of this file, see the
